fixed link spacing

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -21,6 +21,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   padding:0;
+  margin: 0 8px;
   display:flex;
   justify-content:space-between;
   align-items: center;
